Revert "[firebase] Disabled Firebase.RemoteConfig due AOT compiler error"
This reverts commit 7734ca049fc9d9ad153b9eb38cf36c89bc1f1cf5.

This bug was fixed in 15.3 release

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -38,10 +38,10 @@
   BuildScript: ./Firebase.Invites/build.cake
   TriggerPaths: [ Firebase.Invites ]
   MacBuildTargets: [ samples, component ]
-# - Name: Firebase.iOS.RemoteConfig
-#   BuildScript: ./Firebase.RemoteConfig/build.cake
-#   TriggerPaths: [ Firebase.RemoteConfig ]
-#   MacBuildTargets: [ samples, component ]
+- Name: Firebase.iOS.RemoteConfig
+  BuildScript: ./Firebase.RemoteConfig/build.cake
+  TriggerPaths: [ Firebase.RemoteConfig ]
+  MacBuildTargets: [ samples, component ]
 - Name: Firebase.iOS.Storage
   BuildScript: ./Firebase.Storage/build.cake
   TriggerPaths: [ Firebase.Storage ]
