[google][maps] Restored XBD in samples, removed the old classic stuff

--- a/Google.Maps/samples/GoogleMapsAdvSample/GoogleMapsAdvSample/Info.plist
+++ b/Google.Maps/samples/GoogleMapsAdvSample/GoogleMapsAdvSample/Info.plist
@@ -17,5 +17,7 @@
 	</array>
 	<key>CFBundleIdentifier</key>
 	<string>com.xamarin.google.mapsadvsample</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We just want to let you know where you are! :)</string>
 </dict>
 </plist>
