--- a/Google.Places/samples/GooglePlacesSample/GooglePlacesSample/GooglePlacesSample.csproj
+++ b/Google.Places/samples/GooglePlacesSample/GooglePlacesSample/GooglePlacesSample.csproj
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+  <Import Project="..\packages\Xamarin.Build.Download.0.4.7\build\Xamarin.Build.Download.props" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.7\build\Xamarin.Build.Download.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">iPhoneSimulator</Platform>
-    <ProjectGuid>{3844FB0D-6EDA-42FE-985F-404FA7968514}</ProjectGuid>
+    <ProjectGuid>{B55BE51C-E261-4A23-9ACB-2FE7FFF89E22}</ProjectGuid>
     <ProjectTypeGuids>{FEACFBD2-3405-455C-9665-78FE426C6842};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Exe</OutputType>
     <RootNamespace>GooglePlacesSample</RootNamespace>
@@ -23,7 +24,7 @@
     <MtouchNoSymbolStrip>true</MtouchNoSymbolStrip>
     <MtouchFastDev>true</MtouchFastDev>
     <MtouchProfiling>true</MtouchProfiling>
-    <IOSDebuggerPort>42015</IOSDebuggerPort>
+    <IOSDebuggerPort>22042</IOSDebuggerPort>
     <MtouchLink>None</MtouchLink>
     <MtouchArch>x86_64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
@@ -72,7 +73,7 @@
     <MtouchProfiling>true</MtouchProfiling>
     <MtouchFloat32>true</MtouchFloat32>
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
-    <IOSDebuggerPort>61847</IOSDebuggerPort>
+    <IOSDebuggerPort>28406</IOSDebuggerPort>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchArch>ARM64</MtouchArch>
     <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
@@ -90,6 +91,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Samples\" />
+    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -98,13 +101,41 @@
   <ItemGroup>
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="ViewController.cs" />
-    <Compile Include="ViewController.designer.cs">
-      <DependentUpon>ViewController.cs</DependentUpon>
+    <Compile Include="Samples\AutocompleteBaseViewController.cs" />
+    <Compile Include="Samples\AutocompleteBaseViewController.designer.cs">
+      <DependentUpon>AutocompleteBaseViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Samples\UISearchDisplayAutocompleteViewController.cs" />
+    <Compile Include="Samples\UISearchDisplayAutocompleteViewController.designer.cs">
+      <DependentUpon>UISearchDisplayAutocompleteViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Samples\PhotosViewController.cs" />
+    <Compile Include="Samples\PhotosViewController.designer.cs">
+      <DependentUpon>PhotosViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Samples\PlacePickerViewController.cs" />
+    <Compile Include="Samples\PlacePickerViewController.designer.cs">
+      <DependentUpon>PlacePickerViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuTableViewController.cs" />
+    <Compile Include="MenuTableViewController.designer.cs">
+      <DependentUpon>MenuTableViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GoogleApiKey.cs" />
+    <Compile Include="Models\SampleInformation.cs" />
+    <Compile Include="Samples\GoogleOpenSourceViewController.cs" />
+    <Compile Include="Samples\GoogleOpenSourceViewController.designer.cs">
+      <DependentUpon>GoogleOpenSourceViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SamplesGenerator.cs" />
+    <Compile Include="Models\StyledAutocompleteViewController.cs" />
+    <Compile Include="Models\StyledAutocompleteViewController.designer.cs">
+      <DependentUpon>StyledAutocompleteViewController.cs</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -117,5 +148,11 @@
       <Name>Google.Places</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\.DS_Store" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Google.Places\Google.Places.targets" />
+  <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Google.Maps\source\Google.Maps\Google.Maps.targets" />
+  <Import Project="..\packages\Xamarin.Build.Download.0.4.7\build\Xamarin.Build.Download.targets" Condition="Exists('..\packages\Xamarin.Build.Download.0.4.7\build\Xamarin.Build.Download.targets')" />
 </Project>
