[firebase][core] Updated to version 4.0.8.0

--- a/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
+++ b/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
@@ -58,5 +58,10 @@
       <Link>Protobuf</Link>
     </ObjcBindingNativeLibrary>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="..\..\externals\nanopb">
+      <Link>nanopb</Link>
+    </BundleResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
