--- a/Firebase.Core/externals/Podfile
+++ b/Firebase.Core/externals/Podfile
@@ -10,12 +10,13 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseCore' do
-	pod 'Firebase/Core', '4.0.3'
-	pod 'GoogleToolboxForMac/NSData+zlib', '2.1.1'
-	pod 'GoogleToolboxForMac/NSDictionary+URLArguments', '2.1.1'
-	pod 'GoogleToolboxForMac/Logger', '2.1.1'
-	pod 'GoogleToolboxForMac/StringEncoding', '2.1.1'
-	pod 'GoogleToolboxForMac/URLBuilder', '2.1.1'
-	pod 'GTMSessionFetcher/Full', '1.1.11'
-	pod 'Protobuf', '3.3.0'
+	pod 'Firebase/Core', '4.3.0'
+	pod 'GoogleToolboxForMac/NSData+zlib', '2.1.3'
+	pod 'GoogleToolboxForMac/NSDictionary+URLArguments', '2.1.3'
+	pod 'GoogleToolboxForMac/Logger', '2.1.3'
+	pod 'GoogleToolboxForMac/StringEncoding', '2.1.3'
+	pod 'GoogleToolboxForMac/URLBuilder', '2.1.3'
+	pod 'nanopb', '0.3.8'
+	pod 'GTMSessionFetcher/Full', '1.1.12'
+	pod 'Protobuf', '3.4.0'
 end
