--- a/Firebase.Analytics/externals/Podfile
+++ b/Firebase.Analytics/externals/Podfile
@@ -1,27 +1,24 @@
 =begin
 Last run FirebaseAnalytics installed:
-- FirebaseAnalytics (4.0.2)
-- FirebaseCore (4.0.3)
-- FirebaseInstanceID (2.0.0)
-- GoogleInterchangeUtilities (1.2.2)
-- GoogleSymbolUtilities (1.1.2)
-- GoogleToolboxForMac (2.1.1)
+- FirebaseAnalytics (4.0.4)
+- FirebaseCore (4.0.8)
+- FirebaseInstanceID (2.0.4)
+- GoogleToolboxForMac (2.1.3)
+- nanopb (0.3.8)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (4.0.2)
+- FirebaseAnalytics (4.0.4)
 
 In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (4.0.3)
-- GoogleToolboxForMac (2.1.1)
-- GoogleInterchangeUtilities (1.2.2)
-- GoogleSymbolUtilities (1.1.2)
+- FirebaseCore (4.0.8)
+- GoogleToolboxForMac (2.1.3)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (2.0.0)
+- FirebaseInstanceID (2.0.4)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
@@ -30,5 +27,5 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseAnalytics' do
-	pod 'Firebase/Analytics', '4.0.3'
+	pod 'Firebase/Analytics', '4.3.0'
 end
