--- a/Firebase.Database/component/component.yaml
+++ b/Firebase.Database/component/component.yaml
@@ -1,4 +1,4 @@
-version: 4.0.0.1
+version: 4.1.0.0
 name: Firebase Database for iOS
 id: firebaseiosdatabase
 publisher: Xamarin Inc.
@@ -18,7 +18,7 @@ libraries:
 is_shell: true
 packages:
   ios-unified:
-  - Xamarin.Firebase.iOS.Database, Version=4.0.0.1
+  - Xamarin.Firebase.iOS.Database, Version=4.1.0.0
 samples:
 - name: Database Sample
   path: ../samples/DatabaseSample/DatabaseSample.sln
@@ -44,3 +44,6 @@ samples:
   - //xNS:Import[contains (@Project, 'Firebase.InstanceID.targets')]
 local-nuget-repo: ../../tmp-nugets
 no_build: true
+additional-files:
+- source: ../External-Dependency-Info
+  destination: THIRD-PARTY-NOTICES
