--- a/Firebase.Database/nuget/Xamarin.Firebase.iOS.Database.nuspec
+++ b/Firebase.Database/nuget/Xamarin.Firebase.iOS.Database.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>Xamarin.Firebase.iOS.Database</id>
     <title>Firebase APIs Database iOS Library</title>
-    <version>4.0.0.1</version>
+    <version>4.1.0.0</version>
     <authors>Xamarin Inc.</authors>
     <owners>Xamarin Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -26,5 +26,6 @@
 
     <!-- Add targets file for external native reference download -->
     <file src="source/Firebase.Database/Firebase.Database.targets" target="build/Xamarin.Firebase.iOS.Database.targets" />
+    <file src="External-Dependency-Info" target="THIRD-PARTY-NOTICES" />
   </files>
 </package>
