--- a/Google.SignIn/externals/Podfile
+++ b/Google.SignIn/externals/Podfile
@@ -1,37 +1,31 @@
 =begin
 Last run GoogleSignIn installed:
-- FirebaseAnalytics (3.7.0)
-- FirebaseCore (3.5.2)
-- FirebaseInstanceID (1.0.9)
-- GTMOAuth2 (1.1.4)
-- GTMSessionFetcher (1.1.9)
-- GoogleAppUtilities (1.1.2)
-- GoogleInterchangeUtilities (1.2.2)
-- GoogleSignIn (4.0.2)
-- GoogleSymbolUtilities (1.1.2)
-- GoogleToolboxForMac (2.1.1)
+- FirebaseAnalytics (4.0.4)
+- FirebaseCore (4.0.8)
+- FirebaseInstanceID (2.0.4)
+- GTMOAuth2 (1.1.5)
+- GTMSessionFetcher (1.1.12)
+- GoogleSignIn (4.1.0)
+- GoogleToolboxForMac (2.1.3)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Google.SignIn binding, you can find:
-- GoogleSignIn (4.0.2)
-- GTMOAuth2 (1.1.4)
-- GoogleAppUtilities (1.1.2)
+- GoogleSignIn (4.1.0)
+- GTMOAuth2 (1.1.5)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (3.7.0)
-- GoogleInterchangeUtilities (1.2.2)
-- GoogleSymbolUtilities (1.1.2)
+- FirebaseAnalytics (4.0.4)
 
 In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (3.5.2)
-- GoogleToolboxForMac (2.1.1)
-- GTMSessionFetcher (1.1.9)
+- FirebaseCore (4.0.8)
+- GoogleToolboxForMac (2.1.3)
+- GTMSessionFetcher (1.1.12)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (1.0.9)
+- FirebaseInstanceID (2.0.4)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
@@ -40,7 +34,7 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'GoogleSignIn' do
-	pod 'GoogleSignIn',  '4.0.2'
-	pod 'Google/SignIn', '3.0.3'
-	pod 'Firebase/Core', '3.15.0'
+	pod 'GoogleSignIn',  '4.1.0'
+	pod 'Google/SignIn', '3.1.0'
+	pod 'GTMOAuth2', '1.1.5'
 end
