--- a/Firebase.Invites/externals/Podfile
+++ b/Firebase.Invites/externals/Podfile
@@ -1,48 +1,44 @@
 =begin
 Last run FirebaseInvites installed:
-- FirebaseAnalytics (4.0.2)
-- FirebaseCore (4.0.3)
-- FirebaseDynamicLinks (2.0.0)
-- FirebaseInstanceID (2.0.0)
-- FirebaseInvites (2.0.0)
-- GTMOAuth2 (1.1.4)
-- GTMSessionFetcher (1.1.11)
+- FirebaseAnalytics (4.0.4)
+- FirebaseCore (4.0.8)
+- FirebaseDynamicLinks (2.1.0)
+- FirebaseInstanceID (2.0.4)
+- FirebaseInvites (2.0.1)
+- GTMOAuth2 (1.1.5)
+- GTMSessionFetcher (1.1.12)
 - GoogleAPIClientForREST (1.3.1)
-- GoogleSignIn (4.0.2)
-- GoogleInterchangeUtilities (1.2.2)
-- GoogleSymbolUtilities (1.1.2)
-- GoogleToolboxForMac (2.1.1)
+- GoogleSignIn (4.1.0)
+- GoogleToolboxForMac (2.1.3)
 
 Check if main version or subversion number has changed. 
 If yes, please, update *.targets files located in binding 
 projects, also, update Podfile files if needed.
 
 In .targets file, located in Firebase.Invites binding, you can find:
-- FirebaseInvites (2.0.0)
-- GoogleAPIClientForREST (1.3.0)
+- FirebaseInvites (2.0.1)
+- GoogleAPIClientForREST (1.3.1)
 
 In .targets file, located in Google.SignIn binding, you can find:
-- GoogleSignIn (4.0.2)
-- GTMOAuth2 (1.1.4)
+- GoogleSignIn (4.1.0)
+- GTMOAuth2 (1.1.5)
 
 In .targets file, located in Google.Core binding, you can find:
-- Google (3.0.3)
+- Google (3.1.0)
 
 In .targets file, located in Firebase.DynamicLinks binding, you can find:
--  FirebaseDynamicLinks (2.0.0)
+-  FirebaseDynamicLinks (2.1.0)
 
 In .targets file, located in Firebase.Analytics binding, you can find:
-- FirebaseAnalytics (4.0.2)
+- FirebaseAnalytics (4.0.4)
 
 In .targets file, located in Firebase.Core binding, you can find:
-- FirebaseCore (4.0.3)
-- GoogleToolboxForMac (2.1.1)
-- GTMSessionFetcher (1.1.11)
-- GoogleInterchangeUtilities (1.2.2)
-- GoogleSymbolUtilities (1.1.2)	
+- FirebaseCore (4.0.8)
+- GoogleToolboxForMac (2.1.3)
+- GTMSessionFetcher (1.1.12)
 
 In .targets file, located in Firebase.InstanceID binding, you can find:
-- FirebaseInstanceID (2.0.0)
+- FirebaseInstanceID (2.0.4)
 =end
 
 source 'https://github.com/CocoaPods/Specs.git'
@@ -51,5 +47,6 @@ platform :ios, '7.0'
 install! 'cocoapods', :integrate_targets => false
 
 target 'FirebaseInvites' do
-	pod 'Firebase/Invites', '4.0.3'
+	pod 'Firebase/Invites', '4.3.0'
+	pod 'GoogleAPIClientForREST', '1.3.1'
 end
