--- a/Google.Places/samples/GooglePlacesSample/GooglePlacesSample/GooglePlacesSample.csproj
+++ b/Google.Places/samples/GooglePlacesSample/GooglePlacesSample/GooglePlacesSample.csproj
@@ -93,6 +93,7 @@
     <Folder Include="Resources\" />
     <Folder Include="Samples\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
@@ -110,17 +111,17 @@
     <Compile Include="Samples\AutocompleteBaseViewController.designer.cs">
       <DependentUpon>AutocompleteBaseViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="Samples\UISearchDisplayAutocompleteViewController.cs" />
-    <Compile Include="Samples\UISearchDisplayAutocompleteViewController.designer.cs">
-      <DependentUpon>UISearchDisplayAutocompleteViewController.cs</DependentUpon>
+    <Compile Include="Samples\UISearchAutocompleteViewController.cs" />
+    <Compile Include="Samples\UISearchAutocompleteViewController.designer.cs">
+      <DependentUpon>UISearchAutocompleteViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="Samples\PhotosViewController.cs" />
     <Compile Include="Samples\PhotosViewController.designer.cs">
       <DependentUpon>PhotosViewController.cs</DependentUpon>
     </Compile>
-    <Compile Include="Samples\PlacePickerViewController.cs" />
-    <Compile Include="Samples\PlacePickerViewController.designer.cs">
-      <DependentUpon>PlacePickerViewController.cs</DependentUpon>
+    <Compile Include="Samples\MyPlacePickerViewController.cs" />
+    <Compile Include="Samples\MyPlacePickerViewController.designer.cs">
+      <DependentUpon>MyPlacePickerViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuTableViewController.cs" />
     <Compile Include="MenuTableViewController.designer.cs">
@@ -137,6 +138,10 @@
     <Compile Include="Models\StyledAutocompleteViewController.designer.cs">
       <DependentUpon>StyledAutocompleteViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\PhotoCollectionViewCell.cs" />
+    <Compile Include="Views\PhotoCollectionViewCell.designer.cs">
+      <DependentUpon>PhotoCollectionViewCell.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Google.Maps\source\Google.Maps\Google.Maps.csproj">
@@ -149,7 +154,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\.DS_Store" />
+    <BundleResource Include="Resources\thumbnail.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\source\Google.Places\Google.Places.targets" />
