--- a/Google.Places/samples/GooglePlacesSample/GooglePlacesSample/Info.plist
+++ b/Google.Places/samples/GooglePlacesSample/GooglePlacesSample/Info.plist
@@ -21,8 +21,6 @@
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
@@ -36,5 +34,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We want to show you places near to you.</string>
 </dict>
 </plist>
