--- a/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
+++ b/Firebase.Core/source/Firebase.Core/Firebase.Core.csproj
@@ -60,6 +60,9 @@
     <ObjcBindingNativeLibrary Include="..\..\externals\nanopb">
       <Link>nanopb</Link>
     </ObjcBindingNativeLibrary>
+    <ObjcBindingNativeLibrary Include="..\..\externals\leveldb-library">
+      <Link>leveldb-library</Link>
+    </ObjcBindingNativeLibrary>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
 </Project>
