--- a/Firebase.Database/externals/Makefile
+++ b/Firebase.Database/externals/Makefile
@@ -1,34 +1,12 @@
+
 POD=pod
-XCODEBUILD=$(shell xcrun --sdk iphoneos --find xcodebuild)
 
-PROJECT_ROOT=./Pods
-PROJECT=$(PROJECT_ROOT)/Pods.xcodeproj
-TARGETS=leveldb-library
-
-all: Pods $(TARGETS)
+all: Pods
 
 Pods:
 	$(POD) install
 
-$(TARGETS):
-	$(MAKE) $@-iphoneos
-	$(MAKE) $@-iphonesimulator
-	lipo -create -output $@ $@-iphoneos $@-iphonesimulator
-
-%-iphoneos:
-	$(eval currentTarget=$(subst -iphoneos,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphoneos -arch armv7 -arch arm64 -configuration Release clean build
-	-mv ./build/Release-iphoneos/$(currentTarget)/lib$(currentTarget).a $@
-
-%-iphonesimulator:
-	$(eval currentTarget=$(subst -iphonesimulator,,$@))
-	$(XCODEBUILD) -project $(PROJECT) -target $(currentTarget) -sdk iphonesimulator -arch i386 -arch x86_64 -configuration Release clean build
-	-mv ./build/Release-iphonesimulator/$(currentTarget)/lib$(currentTarget).a $@
-
 clean:
 	@ rm -rf Pods build
-	@ for target in $(TARGETS); do \
-        rm -f $$target*; \
-	done
 
 .PHONY: all clean
