[google][places] Adding a dependency on Google Maps
The NuGet needs a reference to Google Maps.  Even though there
is not a dependency in the API there appears to be a runtime
dependency.  If you look at the podspec there is a dependency
listed on GoogleMaps/Base.

--- a/Google.Places/nuget/Xamarin.Google.iOS.Places.nuspec
+++ b/Google.Places/nuget/Xamarin.Google.iOS.Places.nuspec
@@ -14,6 +14,7 @@
     <iconUrl>https://raw.githubusercontent.com/xamarin/GoogleApisForiOSComponents/master/icons/googleiosplaces_128x128.png</iconUrl>
     <dependencies>
       <group targetFramework="Xamarin.iOS10">
+        <dependency id="Xamarin.Google.iOS.Maps" version="2.4.0.0" />
         <dependency id="Xamarin.Build.Download" version="0.4.7" />
       </group>
     </dependencies>
