[Firebase][DynamicLinks] Updated to version 2.3.1.0 - Added new properties - Added Async attributes to ApiDefinition - Changed status bar style in sample - Updated docs

--- a/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/Info.plist
+++ b/Firebase.DynamicLinks/samples/DynamicLinksSample/DynamicLinksSample/Info.plist
@@ -47,5 +47,7 @@
 			<string>Editor</string>
 		</dict>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
