[PerformanceMonitoring] 1.0.6 general build and packaging fixes
 - Adding Firebase. PerformanceMonitoring to the manifest
 - Moving the License file to the root
 - Fixing up the nuspec metadata to be consistent with others
 - Changing nuspec links to be fwlinks

--- a/Firebase.PerformanceMonitoring/component/component.yaml
+++ b/Firebase.PerformanceMonitoring/component/component.yaml
@@ -9,6 +9,7 @@ icons:
 - ../../icons/firebaseiosperformancemonitoring_128x128.png
 - ../../icons/firebaseiosperformancemonitoring_512x512.png
 docs-url: https://firebase.google.com/docs/perf-mon/
+license: ../License.md
 libraries:
   ios-unified:
   - ../output/Firebase.PerformanceMonitoring.dll
