[Firebase][CloudMessaging] Updated docs and rewrote sample - Fixed a typo on docs and added comment to add "remote-notifications" to your Info.plist - Rewrote the sample

--- a/Firebase.CloudMessaging/samples/CloudMessagingSample/CloudMessagingSample/Info.plist
+++ b/Firebase.CloudMessaging/samples/CloudMessagingSample/CloudMessagingSample/Info.plist
@@ -32,6 +32,8 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcons.appiconset</string>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
