[Firebase][CloudFirestore] Partial sample created * Added necessary models * Finished Main.storyboard design * Finished first controller logic (FoldersViewController)

--- a/Firebase.CloudFirestore/samples/CloudFirestoreSample/CloudFirestoreSample/CloudFirestoreSample.csproj
+++ b/Firebase.CloudFirestore/samples/CloudFirestoreSample/CloudFirestoreSample/CloudFirestoreSample.csproj
@@ -27,9 +27,10 @@
     <IOSDebuggerPort>14930</IOSDebuggerPort>
     <MtouchLink>None</MtouchLink>
     <MtouchArch>x86_64</MtouchArch>
-    <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+    <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchExtraArgs>--registrar:static</MtouchExtraArgs>
+    <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>pdbonly</DebugType>
@@ -42,7 +43,7 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchArch>ARM64</MtouchArch>
-    <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+    <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhoneSimulator' ">
@@ -55,7 +56,7 @@
     <MtouchNoSymbolStrip>true</MtouchNoSymbolStrip>
     <MtouchLink>None</MtouchLink>
     <MtouchArch>x86_64</MtouchArch>
-    <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+    <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
     <MtouchExtraArgs>--registrar:static</MtouchExtraArgs>
   </PropertyGroup>
@@ -78,7 +79,7 @@
     <IOSDebuggerPort>32459</IOSDebuggerPort>
     <MtouchLink>SdkOnly</MtouchLink>
     <MtouchArch>ARM64</MtouchArch>
-    <MtouchHttpClientHandler>HttpClientHandler</MtouchHttpClientHandler>
+    <MtouchHttpClientHandler>NSUrlSessionHandler</MtouchHttpClientHandler>
     <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
@@ -106,10 +107,29 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="ViewController.cs" />
-    <Compile Include="ViewController.designer.cs">
-      <DependentUpon>ViewController.cs</DependentUpon>
+    <Compile Include="Models\Folder.cs" />
+    <Compile Include="Models\Note.cs" />
+    <Compile Include="Controllers\FoldersTableViewController.cs" />
+    <Compile Include="Controllers\FoldersTableViewController.designer.cs">
+      <DependentUpon>FoldersTableViewController.cs</DependentUpon>
     </Compile>
+    <Compile Include="Controllers\NoteViewController.cs" />
+    <Compile Include="Controllers\NoteViewController.designer.cs">
+      <DependentUpon>NoteViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Controllers\NotesTableViewController.cs" />
+    <Compile Include="Controllers\NotesTableViewController.designer.cs">
+      <DependentUpon>NotesTableViewController.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FolderTableViewCell.cs" />
+    <Compile Include="Views\FolderTableViewCell.designer.cs">
+      <DependentUpon>FolderTableViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\NoteTableViewCell.cs" />
+    <Compile Include="Views\NoteTableViewCell.designer.cs">
+      <DependentUpon>NoteTableViewCell.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UIAlertHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\Firebase.Analytics\source\Firebase.Analytics\Firebase.Analytics.csproj">
@@ -132,6 +152,9 @@
       <Project>{D6AA184C-DA45-4BBB-988A-451B20C7B804}</Project>
       <Name>Firebase.InstanceID</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="GoogleService-Info.plist" />
   </ItemGroup>
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.InstanceID\source\Firebase.InstanceID\Firebase.InstanceID.targets" />
   <Import Project="$(MSBuildThisFileDirectory)..\..\..\..\Firebase.Core\source\Firebase.Core\Firebase.Core.targets" />
