[Firebase][CloudFirestore] Moved roots.pem file inside a bundle folder in resources to fix a runtime error in library

--- a/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.csproj
+++ b/Firebase.CloudFirestore/source/Firebase.CloudFirestore/Firebase.CloudFirestore.csproj
@@ -84,10 +84,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Resources\gRPCCertificates.bundle\" />
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="..\..\externals\Pods\gRPC\etc\roots.pem">
-      <Link>Resources\roots.pem</Link>
+      <Link>Resources\gRPCCertificates.bundle\roots.pem</Link>
     </BundleResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.ObjCBinding.CSharp.targets" />
