[Firebase][CloudFirestore] Finished sample

--- a/Firebase.CloudFirestore/samples/CloudFirestoreSample/CloudFirestoreSample/CloudFirestoreSample.csproj
+++ b/Firebase.CloudFirestore/samples/CloudFirestoreSample/CloudFirestoreSample/CloudFirestoreSample.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\" />
+    <Folder Include="Assets.xcassets\Back.imageset\" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="LaunchScreen.storyboard" />
