[Firebase][Crashlytics] Added new stuff * Added component.yaml * Added nuget folder * Added build.cake * Added to manifest.yaml, poco.cake and update.yaml

--- a/manifest.yaml
+++ b/manifest.yaml
@@ -22,6 +22,10 @@
   BuildScript: ./Firebase.Core/build.cake
   TriggerPaths: [ Firebase.Core ]
   MacBuildTargets: [ samples, component ]
+- Name: Firebase.iOS.Crashlytics
+  BuildScript: ./Firebase.Crashlytics/build.cake
+  TriggerPaths: [ Firebase.Crashlytics ]
+  MacBuildTargets: [ samples, component ]
 - Name: Firebase.iOS.CrashReporting
   BuildScript: ./Firebase.CrashReporting/build.cake
   TriggerPaths: [ Firebase.CrashReporting ]
